foolish/foolish-core/src/snapshots/foolish_core__approval_tests__operator_with_zero_operands_edge.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 JdSrw7paaGbR20lmFfoA1Vs9qYeN3+grBFQYYH78CsIfG7zNGENi0Ss+R07YGgrArWMnRh5EIBlZvMzWxsRgCA==
INPUT: {a = 0 * 100; b = 0 + 999;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Operator(*) [EMBRYONIC]
    Int(0) [INDEPENDENT]
    Int(100) [INDEPENDENT]
  b = 
  Operator(+) [EMBRYONIC]
    Int(0) [INDEPENDENT]
    Int(999) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  a = 
  Int(0) [CONSTANT]
  b = 
  Int(999) [CONSTANT]
