foolish/foolish-core/src/snapshots/foolish_core__approval_tests__regexSearchNotFoundIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 yKqumaACEktPLKbViufRrdnTznqc9iNjno2ZaqHuFXG7lJsdmtNdPHW/Czs7gzeGudTNiBtTsktrUDesW6PWDw==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  result = 
  Search(pattern='notfound', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [NK]
  result = 
  Search(pattern='notfound', dir=BACKWARD, ANCHORED) [NK]
