foolish/foolish-core/src/snapshots/foolish_core__approval_tests__regexSearchShadowy.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  premordial = 
  Int(0) [INDEPENDENT]
  Brane [EMBRYONIC]
    apple = 
    Int(1) [INDEPENDENT]
    result1 = 
    Search(pattern='(a.*)', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result2 = 
    Search(pattern='^a', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result3 = 
    Search(pattern='e$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result4 = 
    Search(pattern='bob', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result5 = 
    Search(pattern='premordial', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  Brane [EMBRYONIC]
    brn = 
    Brane [EMBRYONIC]
      alice = 
      Int(2) [INDEPENDENT]
      bob = 
      Int(3) [INDEPENDENT]
      charlie = 
      Int(4) [INDEPENDENT]
      adam = 
      Search(pattern='^alice$', dir=BACKWARD, FREE) [EMBRYONIC]
      advent = 
      Int(5) [INDEPENDENT]
      Brane [EMBRYONIC]
        adrian = 
        Int(6) [INDEPENDENT]
      bobulous = 
      Int(7) [INDEPENDENT]
    result1 = 
    Search(pattern='(a.*)', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result2 = 
    Search(pattern='^a', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result3 = 
    Search(pattern='e$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result4 = 
    Search(pattern='bob', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result5 = 
    Search(pattern='premordial', dir=BACKWARD, ANCHORED) [EMBRYONIC]
  Brane [EMBRYONIC]
    brn = 
    Brane [EMBRYONIC]
      alice = 
      Int(2) [INDEPENDENT]
      bob = 
      Int(3) [INDEPENDENT]
      charlie = 
      Int(4) [INDEPENDENT]
      adam = 
      Search(pattern='^alice$', dir=BACKWARD, FREE) [EMBRYONIC]
      advent = 
      Int(5) [INDEPENDENT]
      Brane [EMBRYONIC]
        adrian = 
        Int(6) [INDEPENDENT]
      bobulous = 
      Int(7) [INDEPENDENT]
    brn2 = 
    Brane [EMBRYONIC]
      hardˍtoˍtypoˍnameˍforˍaˍbrane = 
      Search(pattern='^brn$', dir=BACKWARD, FREE) [EMBRYONIC]
    result0 = 
    Search(pattern='^bobulous$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result2 = 
    Search(pattern='.*brane?a.*', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result3 = 
    Search(pattern='(.*brane)?a.*', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result4 = 
    Search(pattern='(.*brane).bobulous', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result5 = 
    Search(pattern='(.*brane)?.*t$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
    result6 = 
    Search(pattern='(.*brane)~.*e$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [NK]
  premordial = 
  Int(0) [INDEPENDENT]
  Brane [NK]
    apple = 
    Int(1) [INDEPENDENT]
    result1 = 
    Int(2) [INDEPENDENT]
    result2 = 
    Int(2) [INDEPENDENT]
    result3 = 
    Int(2) [INDEPENDENT]
    result4 = 
    Int(3) [INDEPENDENT]
    result5 = 
    Search(pattern='premordial', dir=BACKWARD, ANCHORED) [NK]
  Brane [NK]
    brn = 
    Brane [CONSTANT]
      alice = 
      Int(2) [INDEPENDENT]
      bob = 
      Int(3) [INDEPENDENT]
      charlie = 
      Int(4) [INDEPENDENT]
      adam = 
      Int(2) [INDEPENDENT]
      advent = 
      Int(5) [INDEPENDENT]
      Brane [CONSTANT]
        adrian = 
        Int(6) [INDEPENDENT]
      bobulous = 
      Int(7) [INDEPENDENT]
    result1 = 
    Int(2) [INDEPENDENT]
    result2 = 
    Int(2) [INDEPENDENT]
    result3 = 
    Int(2) [INDEPENDENT]
    result4 = 
    Int(3) [INDEPENDENT]
    result5 = 
    Search(pattern='premordial', dir=BACKWARD, ANCHORED) [NK]
  Brane [NK]
    brn = 
    Brane [CONSTANT]
      alice = 
      Int(2) [INDEPENDENT]
      bob = 
      Int(3) [INDEPENDENT]
      charlie = 
      Int(4) [INDEPENDENT]
      adam = 
      Int(2) [INDEPENDENT]
      advent = 
      Int(5) [INDEPENDENT]
      Brane [CONSTANT]
        adrian = 
        Int(6) [INDEPENDENT]
      bobulous = 
      Int(7) [INDEPENDENT]
    brn2 = 
    Brane [CONSTANT]
      hardˍtoˍtypoˍnameˍforˍaˍbrane = 
      Brane [CONSTANT]
        alice = 
        Int(2) [INDEPENDENT]
        bob = 
        Int(3) [INDEPENDENT]
        charlie = 
        Int(4) [INDEPENDENT]
        adam = 
        Int(2) [INDEPENDENT]
        advent = 
        Int(5) [INDEPENDENT]
        Brane [CONSTANT]
          adrian = 
          Int(6) [INDEPENDENT]
        bobulous = 
        Int(7) [INDEPENDENT]
    result0 = 
    Int(7) [INDEPENDENT]
    result2 = 
    Search(pattern='.*brane?a.*', dir=BACKWARD, ANCHORED) [NK]
    result3 = 
    Brane [CONSTANT]
      alice = 
      Int(2) [INDEPENDENT]
      bob = 
      Int(3) [INDEPENDENT]
      charlie = 
      Int(4) [INDEPENDENT]
      adam = 
      Int(2) [INDEPENDENT]
      advent = 
      Int(5) [INDEPENDENT]
      Brane [CONSTANT]
        adrian = 
        Int(6) [INDEPENDENT]
      bobulous = 
      Int(7) [INDEPENDENT]
    result4 = 
    Search(pattern='(.*brane).bobulous', dir=BACKWARD, ANCHORED) [NK]
    result5 = 
    Search(pattern='(.*brane)?.*t$', dir=BACKWARD, ANCHORED) [NK]
    result6 = 
    Search(pattern='(.*brane)~.*e$', dir=BACKWARD, ANCHORED) [NK]
