foolish/foolish-core/src/snapshots/foolish_core__approval_tests__regexSearchWithPatternIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 /+B31mBlsvIofRukT3rHzi03wmQDj/GpBs5W1+2EfRKwsLqsYOchET6wdHizOLhcy3jk1TeceWYieA8v4UG7Bw==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  result = 
  Search(pattern='(a.*)', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  result = 
  Int(1) [INDEPENDENT]
