foolish/foolish-core/src/snapshots/foolish_core__approval_tests__regex_search_anchor_end.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 RnPZfx6DQVG4rPUp5peJlBOQAKTa8VhF4MjOdw62L6wy9Bx8wWDvbt9pFAo2xJoxUcH95T7QP+0AGFPcH8PMDA==
INPUT: {result = {alice = 1; charlie = 2; bob = 3;}?e$;}
[0] PARSED:
Brane [EMBRYONIC]
  result = 
  Search(pattern='e$', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  result = 
  Int(1) [INDEPENDENT]
