foolish/foolish-core/src/snapshots/foolish_core__approval_tests__regex_search_anchor_start.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 O22/J3Krmac2KR0eZ7JMJWbd3TRBqL2rOUGVY7xb9inGJC4hSm6847yGpMQKDEJXBjkfm4sklB5aKOOij50RDg==
INPUT: {result = {alice = 1; adam = 2; bob = 3;}?^a;}
[0] PARSED:
Brane [EMBRYONIC]
  result = 
  Search(pattern='^a', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  result = 
  Int(1) [INDEPENDENT]
