foolish/foolish-core/src/snapshots/foolish_core__approval_tests__regex_search_not_found.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 IID2JfKETyMgbOEe3FQh/S6XtqEYftnlo6kLU7O3k0l7WoaYjbHDKG1qyGa1odykZxsa52H13fz2fAU1C7vRCA==
INPUT: {result = {x = 100; y = 200;}?notfound;}
[0] PARSED:
Brane [EMBRYONIC]
  result = 
  Search(pattern='notfound', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [NK]
  result = 
  Search(pattern='notfound', dir=BACKWARD, ANCHORED) [NK]
