foolish/foolish-core/src/snapshots/foolish_core__approval_tests__regex_search_pattern.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 YSsLll9nfcLtVSOj+oEB0IjGvbAVpAAiYeK1C0Dn9WDhxJVfapxnj8CAzQu7NfQpAs0ztejuioBJzRIMELcXCg==
INPUT: {result = {alice = 1; bob = 2; charlie = 3;}?(a.*);}
[0] PARSED:
Brane [EMBRYONIC]
  result = 
  Search(pattern='(a.*)', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  result = 
  Int(1) [INDEPENDENT]
