foolish/foolish-core/src/snapshots/foolish_core__approval_tests__regression_deep_nesting_does_not_lose_values.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 5U4/u8THI8goVJl+DMP3TIdwWvqwIqKEZXiJRcJteTE2BbC+KMbbsqml/xjMa7v+j6agZ9cRK5kIm1b7ICFgAw==
INPUT: {{{{x = 42; x};};};}
[0] PARSED:
Brane [EMBRYONIC]
  Brane [EMBRYONIC]
    Brane [EMBRYONIC]
      Brane [EMBRYONIC]
        x = 
        Int(42) [INDEPENDENT]
        Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  Brane [CONSTANT]
    Brane [CONSTANT]
      Brane [CONSTANT]
        x = 
        Int(42) [INDEPENDENT]
        Int(42) [INDEPENDENT]
