foolish/foolish-core/src/snapshots/foolish_core__approval_tests__regression_operator_does_not_block_search.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {a=1, b=2, c=3, d=4, e=5, f=6; expr = #-1 + #-2 + #-3 + #-4 + #-5 + #-6;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  Int(3) [INDEPENDENT]
  d = 
  Int(4) [INDEPENDENT]
  e = 
  Int(5) [INDEPENDENT]
  f = 
  Int(6) [INDEPENDENT]
  expr = 
  Operator(+) [EMBRYONIC]
    Operator(+) [EMBRYONIC]
      Operator(+) [EMBRYONIC]
        Operator(+) [EMBRYONIC]
          Operator(+) [EMBRYONIC]
            Index(offset=-1, FREE) [EMBRYONIC]
            Index(offset=-2, FREE) [EMBRYONIC]
          Index(offset=-3, FREE) [EMBRYONIC]
        Index(offset=-4, FREE) [EMBRYONIC]
      Index(offset=-5, FREE) [EMBRYONIC]
    Index(offset=-6, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  Int(3) [INDEPENDENT]
  d = 
  Int(4) [INDEPENDENT]
  e = 
  Int(5) [INDEPENDENT]
  f = 
  Int(6) [INDEPENDENT]
  expr = 
  Int(21) [CONSTANT]
